--- a/mscthesis.tex
+++ b/mscthesis.tex
@@ -76,7 +76,7 @@
   \tableofcontents
   \listoffigures
 
-  \part{Threefold Compressed Sparse Row Matrix Storage Format}
+%  \part{Threefold Compressed Sparse Row Matrix Storage Format}
 
     \input{content/c3sr-intro.tex}
     \input{content/c3sr-c3sr.tex}
@@ -84,10 +84,10 @@
     \input{content/c3sr-benchmarks.tex}
     \input{content/c3sr-outlook.tex}
 
-  \part{matrixgen - A Sparse Matrix Creation Toolkit}
-
-    \input{content/matrixgen-intro.tex}
-    \input{content/matrixgen-modules.tex}
+%  \part{matrixgen - A Sparse Matrix Creation Toolkit}
+%
+%    \input{content/matrixgen-intro.tex}
+%    \input{content/matrixgen-modules.tex}
 
   \printbibliography
   \addcontentsline{toc}{chapter}{\bibname}
@@ -103,6 +103,7 @@
   \todo[FINAL]{Schreibweise der Arrays vereinheitlichen}
   \todo[FINAL]{non-zero vs nonzero}
   \todo[FINAL]{Überschriften unkackern}
+  \todo[FINAL]{Grammatikprüfer}
   \todo{Subsubsection \& Paragraph stylistisch trennen}
   \todo{Reihenbeschriftung der simd-i..-scheme Matrizen horizontal ausrichten}
   \todo{Figure-Style überall anpassen}
@@ -110,6 +111,8 @@
   \todo{peg index vs peg-index}
   \todo{Zweitkorrektor erwähnen}
   \todo{Grid Edge Size $d$ auf Plots einheitlichas;j}
+  \todo{Fam1 entspricht einfacheren simd Instruktionen (kein gather)}
+  \todo{Robert's vorschläge}
   \todos
 
 \end{document}
