--- a/content/c3sr-benchmarks.tex
+++ b/content/c3sr-benchmarks.tex
@@ -12,9 +12,10 @@
     derived thereof are examined. Although these matrices cannot be depicted explicitly due to their extensive sizes,
     they share all of their salient characteristics with the exemplary matrix which will be referred to in order to
     explain the inner details of the C3SR-format.
-
+ 
     \begin{figure}[H]
         \centering
+        \captionsetup{width=0.9\columnwidth}
         \begin{minipage}{0.45\textwidth}
           \centering
           \input{fig/laplacian_example.tikz}
