--- a/content/titlepage.tex
+++ b/content/titlepage.tex
@@ -16,6 +16,9 @@
      Rostov-on-Don};
   \node[below=2cm of DESCR, align=center] (DESCR2)
     {This Master thesis has been carried out at the \textbf{Institute of Computer Engineering (ZITI)}\\ at the
-    \textbf{University of Heidelberg} under the supervision of Prof. Dr. Robert Strzodka.};
+    \textbf{University of Heidelberg} under the supervision of Prof. Dr. Robert Strzodka.\\
+    \newline \\
+    First Corrector: Prof. Dr. Robert Strzodka \\
+    Second Corrector: Prof. Dr. Guido Kanschat};
 \end{tikzpicture}
 \end{titlepage}
